Fix regression on header size due to padding (#4865)
* Fix regression on header size due to padding (causing window vertical scrollbar)

* fix

* fix

* one more fix/improvement

--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -3,6 +3,8 @@
 /*=== GENERAL */
 /*============*/
 :root {
+	--frss-padding-top-bottom: 0.5rem;
+
 	--background-color-light-gradient: #eee;
 	--background-color-light: #fff;
 	--background-color-light-shadowed: #f6f6f6;
@@ -646,8 +648,6 @@ a:hover .icon {
 }
 
 .header > .item {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
 	border-bottom: 1px solid var(--border-color);
 	vertical-align: middle;
 	text-align: center;
@@ -1086,14 +1086,16 @@ a:hover .icon {
 /*===========*/
 
 @media (max-width: 840px) {
+	.header > .item {
+		padding: 0.5rem 1rem;
+	}
+
 	.header > .item.title {
-		padding: 10px 20px;
 		width: 75%;
 		text-align: left;
 	}
 
 	.header > .item.configure {
-		padding: 10px 20px;
 		width: 25%;
 		text-align: right;
 	}
@@ -1125,8 +1127,8 @@ a:hover .icon {
 	}
 
 	.post {
-		padding-left: 15px;
-		padding-right: 15px;
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 
 	.nav_menu .btn {
